[project]
name = "gex-impute"
version = "0.0.dev1"
dependencies = [
	"pyarrow",
	"pandas",
	"plotly",
	"galp @ git+ssh://git@github.com/emorice/galp.git",
	"gemz[peer] @ git+ssh://git@github.com/emorice/gemz.git",
	"gemz-galp @ git+ssh://git@github.com/emorice/gemz-galp.git",
	]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
	"gex_impute",
	"pipeline"
	]
